# openni2_opencv

./: CMakeLists.txt
include/: openni2_frame_listener.h  openni2_wrapper.h
src/: main.cpp  opencv_frame_listener.cpp  openni2_frame_listener.cpp  openni2_wrapper.cpp
